--- a/css/common.css
+++ b/css/common.css
@@ -3,8 +3,8 @@
 html,
 body {
   min-height: 100vh;
+  font-family: "Franklin Gothic", "Arial Narrow", Arial, sans-serif;
   margin: 0;
-  font-family: Arial, sans-serif;
 }
 
 body {
@@ -12,16 +12,50 @@ body {
   flex-direction: column;
 }
 
-.header,
-.footer {
-  height: 70px;
-  color: #ffffff;
-  background-color: #2487c6;
-}
 .content {
   flex-grow: 1;
   background-color: #f7f7f7;
   padding: 12px;
   max-width: 800px;
   margin: auto;
+}
+
+header,
+footer {
+  height: 300px;
+  background-color: rgb(234, 234, 234);
+}
+.logo-header {
+  width: 50px;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: hotpink;
+}
+.active {
+  color: pink;
+  font: bold;
+}
+.grid-container {
+  display: grid;
+  height: 400px;
+  align-content: center;
+  grid-template-columns: auto auto auto;
+  gap: 10px;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
 }
