--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-/* CSS Code, der für alle Web Pages gleich ist und auf allen Web Pages eingebunden werden muss. */
+/* CSS Code, der für alle Web Pages gleich ist und auf allen Web Pages eingebunden werden muss. test */
 
 html,
 body {
