common css aktualisiert V2 15.05.2024

--- a/css/common.css
+++ b/css/common.css
@@ -64,7 +64,7 @@ a {
   margin: auto;
 }
 header {
-  background-image: url(./images/header.jpg);
+  background-image: url(images/header.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -185,4 +185,3 @@ input {
       "last";
   }
 }
-
