--- a/css/common.css
+++ b/css/common.css
@@ -64,7 +64,7 @@ a {
   margin: auto;
 }
 header {
-  background-image: url(header.jpg);
+  background-image: url(../images/header.jpg);
   background-size: cover;
   background-position: center;
 }
