--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,8 @@
-/* CSS Code, der für alle Web Pages gleich ist und auf allen Web Pages eingebunden werden muss. test */
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 html,
 body {
   min-height: 100vh;
-  font-family: "Montserrat", "Arial", sans-serif;
+  font-family: "poppins", "Arial", sans-serif;
   margin: 0;
 }
 body {
@@ -11,15 +10,21 @@ body {
   flex-direction: column;
 }
 .footer_content {
-  width: 1000px;
-  margin: 0 auto;
+  margin: 25px auto;
+  width: 80%;
   display: flex;
-  justify-content: space-around;
-  line-height: 0.5;
-  font-size: small;
+  justify-content: space-between;
+  line-height: 0.75;
+  font-size: 10px;
+}
+footer {
+  margin-top: 40px;
+}
+.footer-items {
+  padding: 10px;
 }
 .header_content {
-  max-width: 1000px;
+  width: 80%;
   color: white;
   margin: 0 auto;
 }
@@ -28,7 +33,8 @@ body {
   justify-content: space-between;
 }
 .header_text {
-  margin-left: 45%;
+  margin-left: 25%;
+  font-size: 14px;
 }
 header,
 footer {
@@ -47,21 +53,105 @@ footer {
 .sm-icons {
   margin-top: 20px;
 }
+#menuToggle {
+  padding: 7px 5px 2px;
+  background-color: #d9adad;
+  border-radius: 4px;
+  display: none;
+  flex-direction: column;
+  position: fixed;
+  top: 49px;
+  right: 20px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+#menuToggle input {
+  display: flex;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  position: absolute;
+  top: -6px;
+  left: -6px;
+}
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+#menuToggle span {
+  display: flex;
+  width: 29px;
+  height: 2px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #ffffff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 5px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -1px);
+  background: #36383f;
+}
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+  position: fixed;
+  width: 222px;
+  height: 100%;
+  box-shadow: 0 0 10px #85888c;
+  margin: -97px 0 0 -253px;
+  padding: 50px;
+  padding-top: 125px;
+  background-color: #f2d8d8;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menu li {
+  padding: 10px 0;
+  transition-delay: 2s;
+}
+
+#menuToggle input:checked ~ ul {
+  transform: none;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-a {
-  text-decoration: none;
-  color: black;
-}
 .active {
-  color: pink;
-  background-color: #ffc0cb3d;
-  padding: 9px;
-  border: solid pink;
-  border-radius: 10px;
+  color: #d9adad;
+  font-weight: 700;
+  padding: 3px;
+  border-bottom: solid 3px #d9adad;
 }
 .content {
   flex-grow: 1;
@@ -70,13 +160,19 @@ a {
   max-width: 800px;
   margin: auto;
 }
+.link-category {
+  color: black;
+}
+.link-category:hover {
+  color: #d9adad;
+}
 header {
-  background-image: url(../images/header.jpg);
+  background-image: url(/assets/images/header.jpg);
   background-size: cover;
   background-position: center;
 }
 footer {
-  background-color: rgb(234, 234, 234);
+  background-color: #f2d8d8;
 }
 .logo-footer {
   height: 140px;
@@ -87,23 +183,23 @@ a {
   color: white;
 }
 a:hover {
-  color: #ff69b4c2;
+  color: #8c6c6c;
 }
 .formelements {
-  margin: 20px;
+  margin: 20px 0;
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 form {
-  width: 50%;
+  width: 100%;
 }
 input {
   height: 30px;
 }
 textarea,
 input {
-  font-family: "Montserrat", "Arial Narrow", Arial, sans-serif;
+  font-family: "poppins", "Arial Narrow", Arial, sans-serif;
   border-radius: 7px;
   border: solid 1px grey;
   margin-top: 5px;
@@ -114,6 +210,10 @@ input {
   justify-content: center;
   margin: 0px 0px 10px 0px;
 }
+.item2-aboutus {
+  background: #f2d8d8;
+  padding: 30px 0;
+}
 .error {
   color: rgb(250, 3, 3);
   display: none;
@@ -121,21 +221,37 @@ input {
 }
 .submitbutton {
   height: 40px;
+  margin-top: 20px;
+  font-family: "poppins", Arial, Helvetica, sans-serif;
+  background-color: #d9adad;
+  border: none;
+  border-radius: 5px;
+}
+.submitbutton:hover {
+  background-color: #594343;
+  cursor: pointer;
+}
+.text-grid {
+  font-size: 14px;
+  padding-left: 30px;
+  margin: 0 auto;
 }
 .grid-container {
   display: grid;
-  width: 80%;
   margin: 0 auto;
   align-content: center;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
   gap: 10px;
-  padding: 20px;
   grid-template-areas:
-    "first first first first"
-    "main main main main"
-    "scnd scnd scnd scnd"
-    "thrd thrd thrd thrd"
-    "last last last last";
+    "first first"
+    "main main"
+    "scnd scnd"
+    "thrd thrd"
+    "last last";
+}
+.content-items {
+  width: 80%;
+  margin: 0 auto;
 }
 .item1 {
   grid-area: first;
@@ -152,30 +268,49 @@ input {
 .item5 {
   grid-area: last;
 }
-.item6 {
-  grid-area: right;
-}
-
-.item7 {
-  grid-area: left;
-}
 
 .grid-container > div {
-  background-color: rgba(163, 163, 163, 0.8);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
+  padding: 45px 0;
 }
-
-.category-img{
-  height: 200px;
-  width: auto;
+.categories {
+  display: flex;
+  justify-content: space-between;
 }
-
+.category-img {
+  width: 450px;
+  height: 320px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+.category-rpca {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+.category-rpca-img {
+  width: 160px;
+  height: 220px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.product-overview {
+  background-color: #f2d8d8;
+  padding: 15px;
+  width: 235px;
+  display: flex;
+  border-radius: 5px;
+  margin: 15px;
+  flex-direction: column;
+  align-items: center;
+}
 .socialmedia {
   height: 25px;
   margin: 9px;
   margin-left: 0px;
+}
+.teampic {
+  width: 200px;
+  border-radius: 5px;
 }
 .norm-links {
   color: black;
@@ -189,9 +324,47 @@ input {
   height: 120px;
   animation: spin 2s linear infinite;
   position: absolute;
-  top: 130%;
+  top: 175%;
   left: 45%;
   transform: translate(-50%, -50%);
+}
+.aboutus-content {
+  font-size: 14px;
+  text-align: justify;
+}
+.aboutus2 {
+  display: flex;
+}
+.aboutus2 p {
+  padding-right: 65px;
+  margin: 0;
+}
+#product-overview {
+  display: flex;
+}
+.product-view {
+  display: flex;
+  align-items: center;
+}
+.product-img {
+  width: 340px;
+  margin-right: 40px;
+  border-radius: 8px;
+}
+.product-text {
+  font-size: 14px;
+  margin: 0;
+}
+.category-img:hover,
+.category-rpca-img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.link-category:hover {
+  font-size: 1.1em;
+  color: #d9adad;
+  transition: font-size 0.3s ease, color 0.3s ease;
 }
 
 @keyframes spin {
@@ -202,25 +375,150 @@ input {
     transform: rotate(360deg);
   }
 }
-
-@media screen and (max-width: 950px) {
-  .grid-container {
-    grid-template-columns: auto auto;
-    grid-template-areas:
-      "first first"
-      "main main"
-      "scnd scnd"
-      "last last";
+@media screen and (max-width: 1260px) {
+  .product-overview {
+    width: auto;
   }
 }
-@media screen and (max-width: 700px) {
+
+@media screen and (max-width: 1040px) {
+  .category-img {
+    width: 105%;
+    height: 320px;
+    object-fit: cover;
+  }
+}
+
+@media screen and (max-width: 835px) {
+  .header_text {
+    margin-left: 16%;
+    font-size: 12px;
+  }
   .grid-container {
-    grid-template-columns: auto;
-    width: 80%;
+    grid-template-columns: 100%;
+    margin: 0 auto;
     grid-template-areas:
       "first"
       "main"
       "scnd"
+      "thrd"
       "last";
+  }
+  .spinner {
+    top: 100%;
+    left: 40%;
+  }
+  .product-otm {
+    flex-direction: column;
+  }
+  .product-otm-2 {
+    margin-top: 30px;
+  }
+  .product-otm-1 {
+    width: 80%;
+  }
+  .header_title {
+    flex-direction: column;
+  }
+  .header_text {
+    margin-left: 0;
+    font-size: 12px;
+    line-height: 1;
+  }
+  .brand-logo-container {
+    flex-wrap: wrap;
+  }
+  .category-img {
+    width: 255px;
+    height: 220px;
+    object-fit: cover;
+  }
+  .aboutus2 {
+    flex-direction: column;
+  }
+  .aboutus2 p {
+    padding-right: 0;
+  }
+  .teampic {
+    width: auto;
+    margin-top: 20px;
+  }
+  .newsletter-input {
+    width: 50%;
+  }
+  .category-rpca {
+    flex-wrap: wrap;
+  }
+  .product-overview {
+    margin-left: 0;
+  }
+  .product-view {
+    flex-direction: column;
+  }
+  .product-img {
+    width: 45%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 650px) {
+  .nav-text {
+    display: none;
+  }
+  #menuToggle {
+    display: block;
+  }
+  .footer_content {
+    flex-direction: column;
+    font-size: x-small;
+    width: 80%;
+  }
+  footer {
+    height: 100%;
+  }
+  .categories {
+    flex-direction: column;
+  }
+  .category-img {
+    width: 330px;
+    height: 320px;
+    object-fit: cover;
+  }
+  .category-rpca {
+    flex-direction: column;
+  }
+  #product-overview {
+    flex-direction: column;
+  }
+  .product-overview {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .category-rpca-img {
+    width: 250px;
+  }
+  .product-img {
+    width: 100%;
+  }
+  .spinner {
+    top: 235%;
+    left: 38%;
+  }
+}
+@media screen and (max-width: 200px) {
+  .grid-container {
+    grid-template-columns: auto;
+    width: 40%;
+    grid-template-areas:
+      "first"
+      "main"
+      "scnd"
+      "thrd"
+      "last";
+  }
+  .game-item {
+    flex-direction: column;
   }
 }
