--- a/css/index.css
+++ b/css/index.css
@@ -1,22 +1,219 @@
+h3 {
+  font-weight: 700;
+  margin-top: 0;
+}
+
+.text-game {
+  color: white;
+}
+
+button,
 .gewinnspiel-button {
-    border-radius: 15px;
-    height: 50px;
-    width: 150px;
+  font-family: "poppins", "Arial", sans-serif;
+  border: none;
+  border-radius: 5px;
+  position: relative;
+  transition: all 250ms;
+  overflow: hidden;
+}
+
+.gewinnspiel-button {
+  width: 150px;
+  color: #594343;
+  background: white;
+  font-weight: bold;
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  z-index: 0;
+}
+
+button::before,
+.gewinnspiel-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 5px;
+  background-color: #594343;
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  z-index: -1;
+  transition: all 250ms;
+}
+
+button:hover,
+.gewinnspiel-button:hover {
+  color: white;
+}
+
+button:hover::before,
+.gewinnspiel-button:hover::before {
+  width: 100%;
+}
+
+.game-item,
+.brand-logo-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.item1-game {
+  background: #d9adad;
+}
+
+.item3-indexpage {
+  background: #f2d8d8;
+}
+
+.product-otm {
+  display: flex;
+}
+
+.text-potm,
+.text-wr {
+  font-size: 14px;
+}
+
+.product-otm-1 {
+  width: 100%;
+  background: linear-gradient(90deg, #f2d8d8, #ffffff);
+  margin-right: 30px;
+  border-radius: 5px;
+  padding: 40px;
+}
+
+.product-otm-2 {
+  width: 100%;
+  border: solid 1.75px #594343;
+  border-width: 1.75px 0;
+}
+
+.potm-pic {
+  width: 80%;
+  border-radius: 7px;
+}
+
+.brand-logo {
+  height: 60px;
+  width: auto;
+  display: flex;
+  align-items: flex-end;
+  margin: 0 15px;
+}
+
+.top-brand {
+  border: solid 2px #594343;
+  border-width: 2px 0;
+  padding: 30px;
+}
+
+.brand-title {
+  display: flex;
+  justify-content: center;
+}
+
+.image-slider {
+  position: relative;
+  max-width: 100%;
+  margin: auto;
+}
+
+.index-pic {
+  width: 300px;
+  display: none;
+  border-radius: 6px;
+  border: none;
+}
+
+.index-pic.active {
+  display: block;
+  margin: 0 auto;
+  border: none;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  background-color: #d9adad;
+  border: none;
+  position: absolute;
+  top: 50%;
+  padding: 16px;
+  margin-top: -22px;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 3px;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: #594343;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.newsletter-button {
+  height: 35px;
+  margin-top: 20px;
+  font-family: "poppins", Arial, Helvetica, sans-serif;
+  background-color: #d9adad;
+  border-radius: 5px;
+}
+
+.newsletter-input {
+  width: 100%;
+}
+
+.popup-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  width: 300px;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.brand-logo-container {
+  display: flex;
+  overflow: hidden;
+  white-space: nowrap;
+  align-items: center;
+  position: relative;
+}
+@keyframes slide {
+  0% {
+    transform: translateX(0);
   }
-  .gewinnspiel-text {
-    color: black;
+  100% {
+    transform: translateX(-50%);
   }
-  .gewinnspiel-text:hover {
-    color: #ff69b4c2;
-  }
-  
-  .brand-logo-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  
-  .brand-logo {
-    height: 100px;
-    width: auto;
-  }
+}
+.brand-logo-slider {
+  display: flex;
+  animation: slide 30s linear infinite;
+}
