--- a/css/game.css
+++ b/css/game.css
@@ -1,5 +1,3 @@
-/* CSS Code, den es für die Game Page braucht */
-
 /* Hilfsklasse */
 .hidden {
   display: none;
@@ -91,8 +89,13 @@
   animation: dryer 1.33s linear infinite;
 }
 
+.fast-dryer-animation {
+  animation: dryer 0.9s linear infinite;
+}
+
+
 .faster-dryer-animation {
-  animation: dryer 1s linear infinite;
+  animation: dryer 0.6s linear infinite;
 }
 
 @keyframes dryer {
@@ -214,9 +217,29 @@
 
 @keyframes fadeIn {
   from {
-    opacity: 0;
+      opacity: 0;
   }
   to {
-    opacity: 1;
+      opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .popup-content {
+    width: 50%;
+    padding: 30px;
+  }
+
+  .verloren, .gewonnen {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  .popup-content p, .score-text, .popup-content button {
+    font-size: 12px;
+  }
+
+  .popup-content img.icon {
+    width: 30px;
   }
 }
