--- a/css/common.css
+++ b/css/common.css
@@ -167,7 +167,7 @@ nav {
   color: #d9adad;
 }
 header {
-  background-image: url(/assets/images/header.jpg);
+  background-image: url(../assets/images/header.jpg);
   background-size: cover;
   background-position: center;
 }
